Make running with OT/J enabled the default